stopped buttons and external refs from line-wrapping

--- a/style/main.css
+++ b/style/main.css
@@ -100,6 +100,7 @@ body{
 	padding:0.25em 0.5em;
 	border-radius:0.25em;
 	font-weight:bold;
+	white-space:nowrap;
 }
 .btn{
 	background-color:var(--accent-color);
@@ -109,6 +110,7 @@ body{
 	text-decoration:none;
 	color:var(--accent-color);
 	font-weight:600;
+	white-space:nowrap;
 }
 .extref:hover{
 	text-decoration:underline;
